--- a/index.html
+++ b/index.html
@@ -13,30 +13,30 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: radial-gradient(circle at top, #0b1424, #030712);
+      background: radial-gradient(circle at top, #020617, #020617, #000);
       color: #f5f5f5;
     }
 
     body.unlocked {
-      background: radial-gradient(circle at top, #ffe6f2, #f5f5ff, #e0f7ff);
-      color: #222;
+      background: radial-gradient(circle at top, #f4f4f5, #e5e7eb, #fef2f2);
+      color: #111827;
     }
 
     .card {
       width: 100%;
-      max-width: 960px;
-      background: rgba(10, 10, 20, 0.95);
+      max-width: 980px;
+      background: rgba(15, 23, 42, 0.96);
       border-radius: 24px;
-      padding: 26px 22px 24px;
-      box-shadow: 0 18px 42px rgba(0, 0, 0, 0.6);
-      border: 1px solid rgba(255, 255, 255, 0.06);
+      padding: 26px 22px 22px;
+      box-shadow: 0 18px 42px rgba(0, 0, 0, 0.7);
+      border: 1px solid rgba(148, 163, 184, 0.4);
       backdrop-filter: blur(14px);
     }
 
     body.unlocked .card {
-      background: rgba(255, 255, 255, 0.94);
-      border-color: rgba(255, 192, 203, 0.6);
-      box-shadow: 0 18px 40px rgba(0, 0, 0, 0.16);
+      background: rgba(255, 255, 255, 0.96);
+      border-color: rgba(254, 202, 202, 0.9);
+      box-shadow: 0 18px 40px rgba(15, 23, 42, 0.26);
     }
 
     .title {
@@ -50,7 +50,7 @@
     }
 
     .title h1 span {
-      background: linear-gradient(120deg, #ff4b6a, #ff7b9b, #ffb347);
+      background: linear-gradient(120deg, #f97373, #fb7185, #fb923c);
       -webkit-background-clip: text;
       color: transparent;
       font-weight: 800;
@@ -74,28 +74,24 @@
 
     .pwd-input {
       padding: 10px 12px;
-      width: 180px;
+      width: 190px;
       border-radius: 999px;
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      background: rgba(0, 0, 0, 0.2);
-      color: #fff;
+      border: 1px solid rgba(148, 163, 184, 0.7);
+      background: rgba(15, 23, 42, 0.6);
+      color: #f9fafb;
       outline: none;
       font-size: 14px;
       text-align: center;
     }
 
     body.unlocked .pwd-input {
-      background: #fff;
-      border-color: rgba(0,0,0,0.12);
-      color: #222;
+      background: #ffffff;
+      border-color: rgba(148, 163, 184, 0.8);
+      color: #111827;
     }
 
     .pwd-input::placeholder {
-      color: rgba(255, 255, 255, 0.4);
-    }
-
-    body.unlocked .pwd-input::placeholder {
-      color: rgba(0, 0, 0, 0.4);
+      color: rgba(148, 163, 184, 0.9);
     }
 
     .btn {
@@ -107,22 +103,22 @@
       font-size: 14px;
       letter-spacing: 3px;
       text-transform: uppercase;
-      background: linear-gradient(135deg, #ff4b6a, #ff7b9b);
-      color: #fff;
-      box-shadow: 0 12px 26px rgba(255, 75, 106, 0.45);
+      background: linear-gradient(135deg, #f97373, #fb7185);
+      color: #ffffff;
+      box-shadow: 0 12px 26px rgba(248, 113, 113, 0.5);
       transition: transform 0.12s ease, box-shadow 0.12s ease, opacity 0.12s ease;
     }
 
     .btn:hover {
       transform: translateY(-1px);
-      box-shadow: 0 16px 32px rgba(255, 75, 106, 0.6);
-      opacity: 0.95;
+      box-shadow: 0 16px 32px rgba(248, 113, 113, 0.65);
+      opacity: 0.96;
     }
 
     .error {
       margin-top: 10px;
       font-size: 13px;
-      color: #ff8080;
+      color: #fda4af;
       min-height: 18px;
     }
 
@@ -162,5 +158,159 @@
       text-decoration: none;
       padding: 12px 14px;
       border-radius: 16px;
-      border: 1px solid rgba(255, 153, 187, 0.45);
-      background: linear-gradient(13
+      border: 1px solid rgba(252, 165, 165, 0.8);
+      background: linear-gradient(135deg, rgba(255, 247, 247, 0.98), rgba(255, 255, 255, 0.98));
+      box-shadow: 0 8px 22px rgba(248, 113, 113, 0.22);
+      color: #111827;
+      transition: transform 0.12s ease, box-shadow 0.12s ease;
+    }
+
+    .link-card:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 14px 32px rgba(248, 113, 113, 0.32);
+    }
+
+    .link-title {
+      font-size: 15px;
+      font-weight: 600;
+      margin-bottom: 4px;
+    }
+
+    .link-desc {
+      font-size: 12px;
+      color: #6b7280;
+      line-height: 1.4;
+      word-break: break-all;
+    }
+
+    .footer {
+      margin-top: 18px;
+      text-align: center;
+      font-size: 11px;
+      opacity: 0.6;
+    }
+
+    @media (max-width: 600px) {
+      .card { padding: 18px 14px 18px; border-radius: 18px; }
+      .title h1 { font-size: 24px; letter-spacing: 3px; }
+    }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <div class="title">
+      <h1>我爱 <span>陛下</span></h1>
+      <p>这里是陛下的小宇宙，只有知道密码的人才看得到里面的世界。</p>
+    </div>
+
+    <!-- 密码入口 -->
+    <div id="gate">
+      <div class="pwd-label">请输入访问密码</div>
+      <form id="pwd-form">
+        <input
+          id="password"
+          type="password"
+          class="pwd-input"
+          placeholder="输入密码后进入"
+          autocomplete="off"
+        />
+        <br />
+        <button type="submit" class="btn">进入密境</button>
+      </form>
+      <div id="error" class="error"></div>
+    </div>
+
+    <!-- 主内容，密码正确后显示 -->
+    <div id="main">
+      <div class="hero">
+        <!-- 太极.jpg：您上传的水墨太极大图 -->
+        <img src="太极.jpg" alt="陛下的太极天下" />
+      </div>
+
+      <div class="links-title">陛下御用网站入口</div>
+      <div class="links">
+        <!-- 图天下：Pinterest -->
+        <a class="link-card" href="https://ru.pinterest.com/" target="_blank">
+          <div class="link-title">图天下 · Pinterest</div>
+          <div class="link-desc">
+            世界各地的图片和灵感，随便一刷都是新的宇宙。
+          </div>
+        </a>
+
+        <!-- 图库：Yandex -->
+        <a class="link-card" href="https://yandex.com/" target="_blank">
+          <div class="link-title">图库 · Yandex</div>
+          <div class="link-desc">
+            搜图、反向搜图、冷门资源，都可以从这里挖出来。
+          </div>
+        </a>
+
+        <!-- IP 购买：Thordata -->
+        <a class="link-card" href="https://dashboard.thordata.com/" target="_blank">
+          <div class="link-title">IP 购买 · Thordata</div>
+          <div class="link-desc">
+            工作用的 IP 控制面板，陛下的外部线路都在这里集合。
+          </div>
+        </a>
+
+        <!-- 域名：Porkbun -->
+        <a class="link-card" href="https://porkbun.com/account/domains" target="_blank">
+          <div class="link-title">域名 · Porkbun</div>
+          <div class="link-desc">
+            管理陛下手上所有好听的域名，从这里起飞和续命。
+          </div>
+        </a>
+
+        <!-- 仓库：GitHub -->
+        <a class="link-card" href="https://github.com/dh6598726-stack/woaibixia" target="_blank">
+          <div class="link-title">仓库 · woaibixia</div>
+          <div class="link-desc">
+            这个页面的代码和之后的扩展，都在这里掌控和更新。
+          </div>
+        </a>
+      </div>
+
+      <div class="footer">
+        Powered by GitHub Pages · Designed only for 陛下
+      </div>
+    </div>
+  </div>
+
+  <script>
+    (function () {
+      const CORRECT_PASSWORD = "180999";
+
+      const form = document.getElementById("pwd-form");
+      const input = document.getElementById("password");
+      const errorEl = document.getElementById("error");
+      const gate = document.getElementById("gate");
+      const main = document.getElementById("main");
+
+      function unlock() {
+        gate.style.display = "none";
+        main.style.display = "block";
+        document.body.classList.add("unlocked");
+      }
+
+      form.addEventListener("submit", function (e) {
+        e.preventDefault();
+        const value = (input.value || "").trim();
+        if (value === CORRECT_PASSWORD) {
+          errorEl.textContent = "";
+          unlock();
+        } else {
+          errorEl.textContent = "密码错误，再试一次。";
+          input.value = "";
+          input.focus();
+        }
+      });
+
+      input.addEventListener("keydown", function (e) {
+        if (e.key === "Enter") {
+          form.dispatchEvent(new Event("submit"));
+        }
+      });
+    })();
+  </script>
+</body>
+</html>
