--- a/index.html
+++ b/index.html
@@ -1,391 +1,363 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>小东勇闯东南亚</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- 全站样式 -->
   <style>
     * {
+      margin: 0; padding: 0;
       box-sizing: border-box;
-      margin: 0;
-      padding: 0;
     }
 
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "SF Pro", "Segoe UI", "PingFang SC", "Microsoft YaHei", sans-serif;
-      background: #120b24;
-      color: #fdfdfd;
+      font-family: "PingFang SC", "Microsoft YaHei", sans-serif;
+      background: #0e0718;
+      color: #fff;
       min-height: 100vh;
       display: flex;
-      align-items: stretch;
       justify-content: center;
+    }
+
+    /* 粒子星光背景 */
+    #star-bg {
+      position: fixed;
+      inset: 0;
+      z-index: -1;
+      background: #0e0718;
     }
 
     /* 锁屏 */
     #lock-screen {
       position: fixed;
       inset: 0;
-      backdrop-filter: blur(8px);
-      background: rgba(10, 5, 30, 0.96);
+      background: rgba(20, 10, 40, 0.9);
+      backdrop-filter: blur(12px);
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       z-index: 99;
     }
 
     .lock-box {
-      background: rgba(255, 255, 255, 0.06);
-      border: 1px solid rgba(255, 255, 255, 0.18);
-      border-radius: 20px;
-      padding: 24px 20px;
-      max-width: 360px;
-      width: 90%;
+      width: 320px;
+      padding: 25px;
+      background: rgba(255,255,255,0.06);
+      border: 1px solid rgba(255,255,255,0.18);
+      border-radius: 18px;
       text-align: center;
+      box-shadow: 0 10px 35px rgba(0,0,0,0.4);
     }
 
     .lock-title {
-      font-size: 18px;
+      font-size: 20px;
       font-weight: 700;
       margin-bottom: 6px;
     }
 
-    .lock-sub {
-      font-size: 13px;
-      opacity: 0.8;
-      margin-bottom: 14px;
-    }
-
     .lock-input {
       width: 100%;
-      padding: 9px 10px;
-      border-radius: 999px;
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      background: rgba(0, 0, 0, 0.25);
-      color: #fff;
-      outline: none;
-      font-size: 14px;
+      margin-top: 12px;
+      padding: 10px;
+      border-radius: 30px;
+      background: rgba(255,255,255,0.1);
+      border: 1px solid rgba(255,255,255,0.25);
       text-align: center;
-      margin-bottom: 10px;
-    }
-
-    .lock-input::placeholder {
-      color: rgba(255, 255, 255, 0.45);
+      color: #fff;
+      font-size: 15px;
     }
 
     .lock-btn {
+      margin-top: 12px;
       width: 100%;
-      border: none;
-      border-radius: 999px;
       padding: 9px 0;
-      font-size: 14px;
+      border: none;
+      border-radius: 30px;
+      background: linear-gradient(135deg,#ffce7a,#ff9a46);
+      color: #000;
       font-weight: 600;
       cursor: pointer;
-      background: #ffb74d;
-      color: #201326;
     }
 
-    .lock-error {
-      min-height: 18px;
-      font-size: 12px;
-      color: #ff8a80;
-      margin-top: 4px;
-    }
-
-    /* 主体内容 */
+    /* 主内容容器 */
     .page {
+      display: none;
       width: 100%;
       max-width: 900px;
       margin: 20px;
-      border-radius: 20px;
-      background: #1b1028;
+      background: rgba(255,255,255,0.06);
+      border-radius: 22px;
+      border: 1px solid rgba(255,255,255,0.15);
+      box-shadow: 0 12px 35px rgba(0,0,0,0.35);
       overflow: hidden;
-      border: 1px solid rgba(255, 255, 255, 0.15);
-      display: none; /* 默认锁住，输入密码后显示 */
     }
 
     header {
-      padding: 20px 18px 10px;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.08);
+      padding: 20px;
+      border-bottom: 1px solid rgba(255,255,255,0.12);
     }
 
     .main-title {
-      font-size: 26px;
+      font-size: 30px;
       font-weight: 800;
-      margin-bottom: 8px;
       letter-spacing: 2px;
+      margin-bottom: 10px;
+      text-shadow: 0 0 12px rgba(255,200,120,0.5);
     }
 
-    /* 顶部流动文字 */
+    /* 顶部流动字幕 */
     .flow-row {
-      position: relative;
       overflow: hidden;
-      border-radius: 999px;
-      border: 1px solid rgba(255, 255, 255, 0.15);
-      background: rgba(0, 0, 0, 0.45);
-      height: 30px;
-      margin-bottom: 10px;
+      border-radius: 30px;
+      background: rgba(0,0,0,0.35);
+      border: 1px solid rgba(255,255,255,0.15);
+      height: 34px;
+      margin-bottom: 12px;
     }
 
     .flow-track {
-      position: absolute;
-      white-space: nowrap;
-      will-change: transform;
-      animation: flow 15s linear infinite;
-      font-size: 13px;
       padding-left: 100%;
-      line-height: 30px;
+      white-space: nowrap;
+      line-height: 34px;
+      font-size: 14px;
       opacity: 0.9;
+      animation: move 14s linear infinite;
     }
 
-    @keyframes flow {
-      from {
-        transform: translateX(0);
-      }
-      to {
-        transform: translateX(-100%);
-      }
+    @keyframes move {
+      from { transform: translateX(0); }
+      to { transform: translateX(-100%); }
     }
 
     /* 诗词卡片 */
     .poem-card {
-      margin-top: 4px;
-      border-radius: 12px;
-      border: 1px dashed rgba(255, 255, 255, 0.28);
-      background: radial-gradient(circle at top left, rgba(255, 224, 178, 0.12), rgba(0, 0, 0, 0.6));
-      padding: 10px 12px;
-      font-size: 13px;
+      margin-top: 5px;
+      padding: 12px;
+      border-radius: 14px;
+      background: rgba(255,255,255,0.08);
+      border: 1px dashed rgba(255,255,255,0.28);
+      font-size: 14px;
       line-height: 1.6;
     }
 
     .poem-title {
-      font-size: 12px;
-      opacity: 0.8;
+      opacity: 0.75;
       margin-bottom: 4px;
-    }
-
-    .poem-line {
-      margin-left: 4px;
+      font-size: 13px;
     }
 
     main {
-      padding: 14px 16px 18px;
+      padding: 20px;
     }
 
-    .link-list {
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-      margin-top: 8px;
-    }
-
+    /* 链接列表 */
     .link-item {
       display: flex;
-      align-items: center;
       justify-content: space-between;
-      gap: 10px;
-      padding: 8px 10px;
-      border-radius: 12px;
-      background: rgba(0, 0, 0, 0.35);
-      border: 1px solid rgba(255, 255, 255, 0.08);
-    }
-
-    .link-left {
-      display: flex;
       align-items: center;
-      gap: 8px;
-      overflow: hidden;
-    }
-
-    .link-icon {
-      font-size: 18px;
-      flex-shrink: 0;
-    }
-
-    .link-text {
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
-    }
-
-    .link-name {
-      font-size: 13px;
-      font-weight: 600;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
-    }
-
-    .link-url {
-      font-size: 11px;
-      opacity: 0.7;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
+      background: rgba(255,255,255,0.08);
+      border: 1px solid rgba(255,255,255,0.12);
+      padding: 10px 14px;
+      border-radius: 14px;
+      margin-bottom: 8px;
     }
 
     .link-open {
-      font-size: 11px;
-      padding: 4px 9px;
-      border-radius: 999px;
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      background: rgba(255, 255, 255, 0.06);
+      padding: 6px 12px;
+      border-radius: 14px;
+      background: rgba(255,255,255,0.15);
+      border: none;
       cursor: pointer;
-      flex-shrink: 0;
+      color: #fff;
+      font-size: 12px;
+    }
+
+    /* 留言区标题动效 */
+    .comment-title {
+      font-size: 18px;
+      font-weight: 700;
+      margin-bottom: 12px;
+      background: linear-gradient(90deg,#fff,#ffe2a8,#fff);
+      -webkit-background-clip: text;
+      color: transparent;
+      opacity: 0;
+      animation: fadeIn 1.6s ease forwards;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(6px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* 留言区外框磨砂 */
+    .giscus-frame {
+      backdrop-filter: blur(16px) !important;
+      background: rgba(255,255,255,0.05) !important;
+      border-radius: 16px !important;
+      border: 1px solid rgba(255,255,255,0.15) !important;
+      box-shadow: 0 10px 35px rgba(0,0,0,0.35);
+      padding: 8px !important;
+      transition: 0.25s ease;
+    }
+
+    /* 微弹动 */
+    .giscus-frame:active {
+      transform: scale(0.98);
     }
 
     footer {
-      padding: 8px 14px 12px;
-      font-size: 11px;
-      opacity: 0.7;
+      padding: 15px;
       text-align: right;
-      border-top: 1px solid rgba(255, 255, 255, 0.08);
-    }
-
-    a {
-      color: inherit;
-      text-decoration: none;
+      opacity: 0.7;
+      font-size: 12px;
     }
   </style>
 </head>
 <body>
-  <!-- 锁屏区域 -->
-  <div id="lock-screen">
-    <div class="lock-box">
-      <div class="lock-title">输入通关暗号</div>
-      <div class="lock-sub">只有知道这串数字的人，才配看到后面的世界。</div>
-      <input
-        id="password-input"
-        type="password"
-        class="lock-input"
-        placeholder="请输入密码"
-      />
-      <button class="lock-btn" onclick="checkPassword()">进入秘密空间</button>
-      <div id="lock-error" class="lock-error"></div>
+
+<!-- 粒子背景 -->
+<canvas id="star-bg"></canvas>
+
+<script>
+const canvas = document.getElementById("star-bg");
+const ctx = canvas.getContext("2d");
+
+function resize(){ canvas.width=innerWidth; canvas.height=innerHeight; }
+resize(); onresize=resize;
+
+let stars = [...Array(130)].map(()=>({
+  x: Math.random()*canvas.width,
+  y: Math.random()*canvas.height,
+  r: Math.random()*1.4+0.2,
+  dx:(Math.random()-0.5)*0.3,
+  dy:(Math.random()-0.5)*0.3
+}));
+
+function draw(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  stars.forEach(s=>{
+    ctx.beginPath();
+    ctx.arc(s.x,s.y,s.r,0,Math.PI*2);
+    ctx.fillStyle="rgba(255,255,255,"+(0.5+Math.random()*0.5)+")";
+    ctx.fill();
+    s.x+=s.dx; s.y+=s.dy;
+    if(s.x<0||s.x>canvas.width) s.dx*=-1;
+    if(s.y<0||s.y>canvas.height) s.dy*=-1;
+  });
+  requestAnimationFrame(draw);
+}
+draw();
+</script>
+
+<!-- 密码锁 -->
+<div id="lock-screen">
+  <div class="lock-box">
+    <div class="lock-title">输入通关暗号</div>
+    <input id="password-input" class="lock-input" placeholder="请输入密码" />
+    <button class="lock-btn" onclick="checkPassword()">进入</button>
+    <div id="lock-error" style="margin-top:6px;color:#ff9999;"></div>
+  </div>
+</div>
+
+<script>
+const PASSWORD="180999";
+function checkPassword(){
+  const v=document.getElementById("password-input").value.trim();
+  if(v===PASSWORD){
+    document.getElementById("lock-screen").style.display="none";
+    document.querySelector(".page").style.display="block";
+  }else{
+    document.getElementById("lock-error").innerText="密码不对，再想想～";
+  }
+}
+document.getElementById("password-input").addEventListener("keydown",e=>{
+  if(e.key==="Enter") checkPassword();
+});
+</script>
+
+<!-- 主内容 -->
+<div class="page">
+
+<header>
+  <div class="main-title">小东勇闯东南亚</div>
+
+  <div class="flow-row">
+    <div class="flow-track">
+      小东勇闯东南亚 · 小东闯东南亚失败 · 小东勇闯东南亚 · 小东闯东南亚失败 ·
     </div>
   </div>
 
-  <!-- 主内容 -->
-  <div class="page" id="page">
-    <header>
-      <div class="main-title">小东勇闯东南亚</div>
+  <div class="poem-card">
+    <div class="poem-title">心底的两句：</div>
+    <div>一种相思，两处闲愁。</div>
+    <div>此情无计可消除，才下眉头，却上心头。</div>
+  </div>
+</header>
 
-      <!-- 顶部流动两句 -->
-      <div class="flow-row">
-        <div class="flow-track">
-          小东勇闯东南亚 · 小东闯东南亚失败 · 小东勇闯东南亚 · 小东闯东南亚失败 · 小东勇闯东南亚 · 小东闯东南亚失败 ·
-        </div>
-      </div>
+<main>
 
-      <!-- 诗词美化 -->
-      <div class="poem-card">
-        <div class="poem-title">随手记下的两句心事：</div>
-        <div class="poem-line">春风若有怜花意，可否许我再少年。</div>
-        <div class="poem-line">我本将心向明月，奈何明月照沟渠。</div>
-      </div>
-    </header>
+  <h2 style="font-size:15px;margin-bottom:10px;">常用网站 · 一键直达</h2>
 
-    <main>
-      <h2 style="font-size:14px;margin-bottom:6px;">常用网站 · 一键直达</h2>
-      <div class="link-list">
-        <div class="link-item">
-          <div class="link-left">
-            <div class="link-icon">🖼️</div>
-            <div class="link-text">
-              <div class="link-name">图天下 · Pinterest</div>
-              <div class="link-url">https://ru.pinterest.com/</div>
-            </div>
-          </div>
-          <button class="link-open" onclick="window.open('https://ru.pinterest.com/', '_blank')">打开</button>
-        </div>
-
-        <div class="link-item">
-          <div class="link-left">
-            <div class="link-icon">🗂️</div>
-            <div class="link-text">
-              <div class="link-name">图库 · Yandex</div>
-              <div class="link-url">https://yandex.com/</div>
-            </div>
-          </div>
-          <button class="link-open" onclick="window.open('https://yandex.com/', '_blank')">打开</button>
-        </div>
-
-        <div class="link-item">
-          <div class="link-left">
-            <div class="link-icon">🌐</div>
-            <div class="link-text">
-              <div class="link-name">IP 购买 · Thordata</div>
-              <div class="link-url">https://dashboard.thordata.com/</div>
-            </div>
-          </div>
-          <button class="link-open" onclick="window.open('https://dashboard.thordata.com/', '_blank')">打开</button>
-        </div>
-
-        <div class="link-item">
-          <div class="link-left">
-            <div class="link-icon">🔑</div>
-            <div class="link-text">
-              <div class="link-name">域名管理 · Porkbun</div>
-              <div class="link-url">https://porkbun.com/account/domainsSpeedy</div>
-            </div>
-          </div>
-          <button class="link-open" onclick="window.open('https://porkbun.com/account/domainsSpeedy', '_blank')">打开</button>
-        </div>
-
-        <div class="link-item">
-          <div class="link-left">
-            <div class="link-icon">📦</div>
-            <div class="link-text">
-              <div class="link-name">仓库 · GitHub</div>
-              <div class="link-url">https://github.com/dh6598726-stack/woaibixia</div>
-            </div>
-          </div>
-          <button class="link-open" onclick="window.open('https://github.com/dh6598726-stack/woaibixia', '_blank')">打开</button>
-        </div>
-
-        <div class="link-item">
-          <div class="link-left">
-            <div class="link-icon">📲</div>
-            <div class="link-text">
-              <div class="link-name">二步验证 · 2FA</div>
-              <div class="link-url">https://2fa.live/tok/2oohq5ilcsuoni4nwxfs76c6asbclweq</div>
-            </div>
-          </div>
-          <button class="link-open" onclick="window.open('https://2fa.live/tok/2oohq5ilcsuoni4nwxfs76c6asbclweq', '_blank')">打开</button>
-        </div>
-      </div>
-    </main>
-
-    <footer>
-      这个页面只给自己看得懂。
-    </footer>
+  <div class="link-item">
+    <span>🖼️ Pinterest 图库</span>
+    <button class="link-open" onclick="window.open('https://ru.pinterest.com/')">打开</button>
   </div>
 
-  <script>
-    const PASSWORD = "180999";
+  <div class="link-item">
+    <span>🗂️ Yandex 图库</span>
+    <button class="link-open" onclick="window.open('https://yandex.com/')">打开</button>
+  </div>
 
-    function checkPassword() {
-      const input = document.getElementById("password-input");
-      const error = document.getElementById("lock-error");
-      const value = input.value.trim();
+  <div class="link-item">
+    <span>🌐 Thordata 购买 IP</span>
+    <button class="link-open" onclick="window.open('https://dashboard.thordata.com/')">打开</button>
+  </div>
 
-      if (value === PASSWORD) {
-        document.getElementById("lock-screen").style.display = "none";
-        document.getElementById("page").style.display = "block";
-      } else {
-        error.textContent = "密码不对，再想想～";
-        input.value = "";
-        input.focus();
-      }
-    }
+  <div class="link-item">
+    <span>🔑 Porkbun 域名管理</span>
+    <button class="link-open" onclick="window.open('https://porkbun.com/account/domainsSpeedy')">打开</button>
+  </div>
 
-    // 回车键触发
-    document
-      .getElementById("password-input")
-      .addEventListener("keydown", function (e) {
-        if (e.key === "Enter") {
-          checkPassword();
-        }
-      });
-  </script>
+  <div class="link-item">
+    <span>📦 GitHub 仓库</span>
+    <button class="link-open" onclick="window.open('https://github.com/dh6598726-stack/woaibixia')">打开</button>
+  </div>
+
+  <div class="link-item">
+    <span>📲 二步验证</span>
+    <button class="link-open" onclick="window.open('https://2fa.live/tok/2oohq5ilcsuoni4nwxfs76c6asbclweq')">打开</button>
+  </div>
+
+  <!-- 留言区 -->
+  <div style="margin-top:25px;">
+    <div class="comment-title">💬 留言板</div>
+
+    <script src="https://giscus.app/client.js"
+      data-repo="dh6598726-stack/woaibixia"
+      data-repo-id="R_kgDOMO-z-w"
+      data-category="General"
+      data-category-id="DIC_kwDOMO-z-84CjLim"
+      data-mapping="pathname"
+      data-strict="0"
+      data-reactions-enabled="1"
+      data-emit-metadata="0"
+      data-input-position="bottom"
+      data-theme="dark"
+      data-lang="zh-CN"
+      crossorigin="anonymous"
+      async>
+    </script>
+  </div>
+
+</main>
+
+<footer>
+  这个页面，只给看得懂的人看。
+</footer>
+
+</div>
+
 </body>
 </html>
